fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/New_Product_Tracking__c.field-meta.xml
<CustomField>
    <fullName>New_Product_Tracking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Product Tracking</label>
    <referenceTo>New_Product_Tracking__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>