fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Next_Step_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Date__c</fullName>
    <description>Anesthesia and Respiratory Date field for Next Steps</description>
    <label>Next Step Date</label>
    <type>Date</type>
</CustomField>