fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Next_Year_Amount__c.field-meta.xml
<CustomField>
    <fullName>Next_Year_Amount__c</fullName>
    <formula>IF( YEAR(CloseDate) = YEAR( TODAY() ) ,  Carry_Over_Amount1__c  , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Year Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>