fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/NextYearPolymerImpact__c.field-meta.xml
<CustomField>
    <fullName>NextYearPolymerImpact__c</fullName>
    <formula>IF(
OR(AmountofPolymerLost__c == null, AmountofPolymerLost__c == 0 ),
0,
IF(
AND( NOT( One_Time_Sale__c ),YEAR(CloseDate) - YEAR( Today() ) = 1 ),
(AmountofPolymerLost__c/365) * ( DATE(YEAR(CloseDate),12,31) - DATE(YEAR(CloseDate),MONTH(CloseDate),DAY(CloseDate) ) ),
IF(
AND( One_Time_Sale__c,YEAR(CloseDate) - YEAR( Today() ) = 1 ),
AmountofPolymerLost__c,
CarryOverPolymerAmmount__c
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Year Polymer Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>