fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/NPI__c.field-meta.xml
<CustomField>
    <fullName>NPI__c</fullName>
    <inlineHelpText>Primary NPI of Physician being Proctored.</inlineHelpText>
    <label>NPI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>