fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/One_Time_Sale__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Sale__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this is a one time purchase</inlineHelpText>
    <label>One Time Purchase?</label>
    <type>Checkbox</type>
</CustomField>