fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Open_Closed_Toggle__c.field-meta.xml
<CustomField>
    <fullName>Open_Closed_Toggle__c</fullName>
    <formula>if(ISPICKVAL(StageName, &quot;Closed Won&quot;), &quot;Closed Won&quot;,
if(ISPICKVAL(StageName, &quot;Closed Lost&quot;), &quot;Closed Lost&quot;,
&quot;Open&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Closed Toggle</label>
    <type>Text</type>
</CustomField>