fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Opportunity_Last_Update_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Last_Update_Date_Time__c</fullName>
    <inlineHelpText>Last time the Opportunity Amount, Stage, or Close Date was Updated</inlineHelpText>
    <label>Opportunity Last Update Date/Time</label>
    <type>DateTime</type>
</CustomField>