fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Opportunity_Last_Update_Days__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Last_Update_Days__c</fullName>
    <formula>CEILING(NOW() - Opportunity_Last_Update_Date_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Last Update (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>