fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Opportunity_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Id__c</fullName>
    <formula>LEFT(Owner.Id,15)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Id</label>
    <type>Text</type>
</CustomField>