fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/OtherVendorCredentialing__c.field-meta.xml
<CustomField>
    <fullName>OtherVendorCredentialing__c</fullName>
    <formula>Account.OtherVendorCredentialing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Vendor Credentialing</label>
    <type>Text</type>
</CustomField>