fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Overdue__c.field-meta.xml
<CustomField>
    <fullName>Overdue__c</fullName>
    <formula>AND(
CloseDate &lt; DATE(YEAR(TODAY()),MONTH(TODAY()),1),
IsClosed = FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue</label>
    <type>Checkbox</type>
</CustomField>