fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Overdue_Date__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Date__c</fullName>
    <formula>DATE(YEAR(TODAY()),MONTH(TODAY()),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue Date</label>
    <type>Date</type>
</CustomField>