fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Owner_Region__c.field-meta.xml
<CustomField>
    <fullName>Owner_Region__c</fullName>
    <formula>text(Owner.Region__c)</formula>
    <label>Owner Region</label>
    <type>Text</type>
</CustomField>