fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Owner_Region_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Region_Name__c</fullName>
    <label>Owner Region Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>