fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Owner_s_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Manager_Email__c</fullName>
    <description>populated by workflow from user object.</description>
    <label>Owner&apos;s Manager Email</label>
    <type>Email</type>
</CustomField>