fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Owner_Territory_Number__c.field-meta.xml
<CustomField>
    <fullName>Owner_Territory_Number__c</fullName>
    <label>Owner Territory Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>