fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/ParentCampaign__c.field-meta.xml
<CustomField>
    <fullName>ParentCampaign__c</fullName>
    <formula>Campaign.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Campaign</label>
    <type>Text</type>
</CustomField>