fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Predicted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Amount__c</fullName>
    <label>Predicted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>