fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Price_Quote__c.field-meta.xml
<CustomField>
    <fullName>Price_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Quote</label>
    <referenceTo>Price_Quote__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>