fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Primary_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Primary_Campaign__c</fullName>
    <description>Field created to allow the column to be available for list views.  Refer to case 00014302 for history.</description>
    <formula>Campaign.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Campaign</label>
    <type>Text</type>
</CustomField>