fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Primary_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_ID__c</fullName>
    <label>Primary Contact ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>