fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Probability_Stage__c.field-meta.xml
<CustomField>
    <fullName>Probability_Stage__c</fullName>
    <description>Text Field which is concatenation of Probability with Stage, this would help Sort the Opportunity Funnel by Probability on Opportunity Wave Dashboard.

Concatenated to make the Label more meaningful instead of Just showing as 10% it would show as 10% -Needs Analysis.</description>
    <formula>(Text(Probability*100)&amp;&quot;%&quot;) &amp; &quot; - &quot; &amp; Text(StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Probability - Stage</label>
    <type>Text</type>
</CustomField>