fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Proctor_Date__c.field-meta.xml
<CustomField>
    <fullName>Proctor_Date__c</fullName>
    <label>Proctor Date</label>
    <type>Date</type>
</CustomField>