fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Product_Family_LatAm__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_LatAm__c</fullName>
    <inlineHelpText>This field is dependent on the Business Unit field.</inlineHelpText>
    <label>Product Family (LatAm)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Unit__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Airway</fullName>
            </value>
            <value>
                <fullName>Arterial</fullName>
            </value>
            <value>
                <fullName>Atomization</fullName>
            </value>
            <value>
                <fullName>Bladder Management</fullName>
            </value>
            <value>
                <fullName>Cardiac Diagnostics</fullName>
            </value>
            <value>
                <fullName>Cardiac Intervention</fullName>
            </value>
            <value>
                <fullName>Cardiovascular</fullName>
            </value>
            <value>
                <fullName>Central Venous Access</fullName>
            </value>
            <value>
                <fullName>Dialysis Access</fullName>
            </value>
            <value>
                <fullName>EMS</fullName>
            </value>
            <value>
                <fullName>Endourology &amp; Special</fullName>
            </value>
            <value>
                <fullName>Fascial Closure</fullName>
            </value>
            <value>
                <fullName>IAB</fullName>
            </value>
            <value>
                <fullName>IABP</fullName>
            </value>
            <value>
                <fullName>Instruments</fullName>
            </value>
            <value>
                <fullName>Interventional Access</fullName>
            </value>
            <value>
                <fullName>Interventional Procedures</fullName>
            </value>
            <value>
                <fullName>Interventional Sheaths</fullName>
            </value>
            <value>
                <fullName>Large Bore CVCs</fullName>
            </value>
            <value>
                <fullName>Laryngeal Mask</fullName>
            </value>
            <value>
                <fullName>Ligation</fullName>
            </value>
            <value>
                <fullName>Pain Management</fullName>
            </value>
            <value>
                <fullName>Percutaneous Solutions</fullName>
            </value>
            <value>
                <fullName>Peripheral Access</fullName>
            </value>
            <value>
                <fullName>Peripheral Interventions</fullName>
            </value>
            <value>
                <fullName>PICCs</fullName>
            </value>
            <value>
                <fullName>Respiratory</fullName>
            </value>
            <value>
                <fullName>Right Heart</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>