fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Product_of_Interest_LatAm__c.field-meta.xml
<CustomField>
    <fullName>Product_of_Interest_LatAm__c</fullName>
    <inlineHelpText>This field is dependent on the Product Family field</inlineHelpText>
    <label>Product of Interest (LatAm)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Family_LatAm__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1A</fullName>
            </value>
            <value>
                <fullName>1st Generation LMA</fullName>
            </value>
            <value>
                <fullName>2nd Generation LMA</fullName>
            </value>
            <value>
                <fullName>3 Lumen PICC</fullName>
            </value>
            <value>
                <fullName>Active Humidification</fullName>
            </value>
            <value>
                <fullName>Acute Hemodialysis</fullName>
            </value>
            <value>
                <fullName>Acute Hemodialysis AGB+</fullName>
            </value>
            <value>
                <fullName>Adaptors &amp; Connectors</fullName>
            </value>
            <value>
                <fullName>AE5</fullName>
            </value>
            <value>
                <fullName>Aerosol Therapy</fullName>
            </value>
            <value>
                <fullName>AGB+</fullName>
            </value>
            <value>
                <fullName>AKP1A</fullName>
            </value>
            <value>
                <fullName>Angioplasty</fullName>
            </value>
            <value>
                <fullName>Arrow Midline with Chlorag+ard</fullName>
            </value>
            <value>
                <fullName>Arrow PICC (A5)</fullName>
            </value>
            <value>
                <fullName>Arrow PICC with Chlorag+ard</fullName>
            </value>
            <value>
                <fullName>Atomization</fullName>
            </value>
            <value>
                <fullName>AutoCat2 Series</fullName>
            </value>
            <value>
                <fullName>AutoCat2 Series Transport</fullName>
            </value>
            <value>
                <fullName>AutoFuser Pain Pump</fullName>
            </value>
            <value>
                <fullName>Automatic Polymer</fullName>
            </value>
            <value>
                <fullName>Auto Polymer</fullName>
            </value>
            <value>
                <fullName>Berman Catheters</fullName>
            </value>
            <value>
                <fullName>Bipolar Pacing Catheters</fullName>
            </value>
            <value>
                <fullName>Bladder Catherization Set</fullName>
            </value>
            <value>
                <fullName>Bladder Catheters without Balloon</fullName>
            </value>
            <value>
                <fullName>BU System</fullName>
            </value>
            <value>
                <fullName>Cardiovascular</fullName>
            </value>
            <value>
                <fullName>Cavity Drainage and Accessories</fullName>
            </value>
            <value>
                <fullName>Chest Drainage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>