fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Product_of_Interest_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Product_of_Interest_Reporting__c</fullName>
    <formula>if(NOT(ISBLANK(TEXT(Product_of_Interest_GPL__c))), TEXT(Product_of_Interest_GPL__c),
if(NOT(ISBLANK(Product_of_Interest_Sort__c)), Product_of_Interest_Sort__c,
if(NOT(ISBLANK(TEXT(Product_of_Interest_LatAm__c))), TEXT(Product_of_Interest_LatAm__c),
NULL
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product of Interest Reporting</label>
    <type>Text</type>
</CustomField>