fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Product_SubGroup__c.field-meta.xml
<CustomField>
    <fullName>Product_SubGroup__c</fullName>
    <description>Field brought over from Australia data integration.</description>
    <label>Product SubGroup</label>
    <length>80</length>
    <type>Text</type>
</CustomField>