fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/ProvidedCostCalculator__c.field-meta.xml
<CustomField>
    <fullName>ProvidedCostCalculator__c</fullName>
    <label>Provided Cost Calculator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>