fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Qty_Eaches__c.field-meta.xml
<CustomField>
    <fullName>Qty_Eaches__c</fullName>
    <description>Estimated eaches quantity</description>
    <inlineHelpText>Estimated eaches quantity</inlineHelpText>
    <label>Qty Eaches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>