fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Reason_Opp_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_Opp_Lost__c</fullName>
    <inlineHelpText>If this is a opportunity that is marked &quot;Lost&quot;, choose a reason that best describes why it was lost</inlineHelpText>
    <label>Reason Opportunity Lost</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>Clinical Issue</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Duplicate/Error</fullName>
            </value>
            <value>
                <fullName>GPO/Contract Compliance</fullName>
            </value>
            <value>
                <fullName>Lost Current Business</fullName>
            </value>
            <value>
                <fullName>Lost Revenue</fullName>
            </value>
            <value>
                <fullName>Off Contract</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Poor Outcome</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Product Specs</fullName>
            </value>
            <value>
                <fullName>Service Issue</fullName>
            </value>
            <value>
                <fullName>Supply</fullName>
            </value>
            <value>
                <fullName>SYSTEM</fullName>
            </value>
            <value>
                <fullName>Technical Docs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>