fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Reason_Opportunity_Won__c.field-meta.xml
<CustomField>
    <fullName>Reason_Opportunity_Won__c</fullName>
    <label>Reason Opportunity Won</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>Option A</fullName>
            </value>
            <value>
                <fullName>Option B</fullName>
            </value>
            <value>
                <fullName>Option C</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Supply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>