fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Region_Name__c.field-meta.xml
<CustomField>
    <fullName>Region_Name__c</fullName>
    <formula>Territory__r.Region_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region Name</label>
    <type>Text</type>
</CustomField>