fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Region_Number__c.field-meta.xml
<CustomField>
    <fullName>Region_Number__c</fullName>
    <formula>Territory__r.Region_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region Number</label>
    <type>Text</type>
</CustomField>