fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Code__c</fullName>
    <description>Pulls the Account SAP Code into the Opportunity page for tracking and reporting purposes</description>
    <formula>Account.SAP_Sold_To__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Code</label>
    <type>Text</type>
</CustomField>