fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Stage_Count__c.field-meta.xml
<CustomField>
    <fullName>Stage_Count__c</fullName>
    <inlineHelpText>Total Number of Unique Stages</inlineHelpText>
    <label>Stage Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>