fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Stage_Status__c.field-meta.xml
<CustomField>
    <fullName>Stage_Status__c</fullName>
    <formula>IF(AND(IsWon = FALSE,MONTH(CloseDate) &lt; MONTH(TODAY())),
&quot;Overdue&quot;,
IF(AND(IsWon = FALSE, MONTH(CloseDate) &gt;= MONTH(TODAY())),
&quot;Pipeline&quot;, 
NULL
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage Status</label>
    <type>Text</type>
</CustomField>