fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/TargetingToolUsed__c.field-meta.xml
<CustomField>
    <fullName>TargetingToolUsed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Targeting Tool Used</label>
    <type>Checkbox</type>
</CustomField>