fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Tender_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Tender_Product_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Focus Product</label>
    <type>Checkbox</type>
</CustomField>