fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Territory_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Territory_Business_Unit__c</fullName>
    <formula>TEXT(Territory__r.Business_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Business Unit</label>
    <type>Text</type>
</CustomField>