fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Territory_Number__c.field-meta.xml
<CustomField>
    <fullName>Territory_Number__c</fullName>
    <formula>Territory__r.Territory_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Number</label>
    <type>Text</type>
</CustomField>